# prd

./: README.md  package-lock.json  package.json  pyproject.toml  setup.cfg
prd-frontend/: package-lock.json  package.json
prd-frontend/src/: App.tsx
prd/card/: admin.py  models.py  szs.py  urls.py  views.py
prd/card/migrations/: 0001_initial.py  0002_publiccardinfo_privatecardinfo.py  0003_emailmodel_linkmodel_memomodel_phonemodel_and_more.py  0004_emailmodel_order_linkmodel_order_phonemodel_order_and_more.py  0005_alter_emailmodel_card_id_alter_phonemodel_card_id.py  0006_rename_card_id_emailmodel_card_and_more.py
prd/prd/: settings.py  urls.py
